add icons to map

--- a/test_map.html
+++ b/test_map.html
@@ -63,6 +63,90 @@
       iconSize:     [24, 24],
       iconAnchor:   [12, 12]
     });
+
+    //elevator icons
+    L.marker([43.1276125, -77.6291051], {icon: ElevatorWCIcon}).addTo(map);
+    L.marker([43.1274355, -77.6299342], {icon: ElevatorWCIcon}).addTo(map);
+    L.marker([43.1287886,	-77.6283118], {icon: ElevatorWCIcon}).addTo(map);
+    L.marker([43.1285332,	-77.6287911], {icon: ElevatorWCIcon}).addTo(map);
+    L.marker([43.1283968,	-77.629964], {icon: ElevatorWCIcon}).addTo(map);
+    L.marker([43.1268674,	-77.6298621], {icon: ElevatorNotWCIcon}).addTo(map);
+    L.marker([43.1280796,	-77.6307938], {icon: ElevatorNotWCIcon}).addTo(map);
+    L.marker([43.128426,	-77.6282768], {icon: ElevatorNotWCIcon}).addTo(map);
+    L.marker([43.1285562,	-77.6284588], {icon: ElevatorNotWCIcon}).addTo(map);
+
+    //stairs icons
+    L.marker([43.1275485,	-77.6297659], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1275985,	-77.629621], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1282961,	-77.6298432], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1283492,	-77.6296488], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1282856,	-77.629008], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1275883,	-77.6311369], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1275439,	-77.6310123], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1274337,	-77.6310388], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1279407,	-77.6312298], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1287609,	-77.6289171], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1285883,	-77.6291013], {icon: stairsIcon}).addTo(map);
+    L.marker([43.128738,	-77.6290179], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1276688,	-77.6294263], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1278215,	-77.629013], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1273017,	-77.6290454], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1293054,	-77.631355], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1292582,	-77.6314721], {icon: stairsIcon}).addTo(map);
+    L.marker([43.12934,	-77.631243], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1269542,	-77.6298441], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1271962,	-77.6299666], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1274355,	-77.6300423], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1273277,	-77.6302874], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1274329,	-77.6295342], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1274118,	-77.6296135], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1283633,	-77.6308529], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1281519,	-77.630689], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1284164,	-77.6298514], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1285104,	-77.6296046], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1286647,	-77.6300753], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1285523,	-77.6301978], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1284771,	-77.6284728], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1283877,	-77.6283713], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1285358,	-77.6283328], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1285179,	-77.627899], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1283698,	-77.6289871], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1283162,	-77.6286512], {icon: stairsIcon}).addTo(map);
+    L.marker([43.1284745,	-77.6287526], {icon: stairsIcon}).addTo(map);
+
+    //steps icons
+    L.marker([43.1278898,	-77.629309], {icon: stepsIcon}).addTo(map);
+    L.marker([43.1292073,	-77.6314372], {icon: stepsIcon}).addTo(map);
+    L.marker([43.1292527,	-77.6313251], {icon: stepsIcon}).addTo(map);
+    L.marker([43.1292927,	-77.6312056], {icon: stepsIcon}).addTo(map);
+    L.marker([43.1275354,	-77.6302513], {icon: stepsIcon}).addTo(map);
+    L.marker([43.127437,	-77.6297163], {icon: stepsIcon}).addTo(map);
+    L.marker([43.1275113,	-77.6295178], {icon: stepsIcon}).addTo(map);
+    L.marker([43.1280086,	-77.6305709], {icon: stepsIcon}).addTo(map);
+    L.marker([43.1284373,	-77.6294587], {icon: stepsIcon}).addTo(map);
+
+    //ramp icons
+    L.marker([43.1278946,	-77.6292573], {icon: rampIcon}).addTo(map);
+    L.marker([43.1275275,	-77.6302802], {icon: rampIcon}).addTo(map);
+    L.marker([43.1280017,	-77.6305957], {icon: rampIcon}).addTo(map);
+    L.marker([43.1284461,	-77.6294503], {icon: rampIcon}).addTo(map);
+    L.marker([43.1285883,	-77.6290144], {icon: rampIcon}).addTo(map);
+
+    //bench icons
+    L.marker([43.1282528,	-77.6300452], {icon: benchIcon}).addTo(map);
+    L.marker([43.1281894,	-77.6302399], {icon: benchIcon}).addTo(map);
+    L.marker([43.1286943,	-77.6287485], {icon: benchIcon}).addTo(map);
+    L.marker([43.1279306,	-77.6299444], {icon: benchIcon}).addTo(map);
+    L.marker([43.1288705,	-77.6290047], {icon: benchIcon}).addTo(map);
+    L.marker([43.1276439,	-77.6298366], {icon: benchIcon}).addTo(map);
+    L.marker([43.1276896,	-77.6296767], {icon: benchIcon}).addTo(map);
+    L.marker([43.1283067,	-77.6297827], {icon: benchIcon}).addTo(map);
+    L.marker([43.1284767,	-77.6291222], {icon: benchIcon}).addTo(map);
+    L.marker([43.128124,	-77.6288823], {icon: benchIcon}).addTo(map);
+    L.marker([43.1274054,	-77.6307613], {icon: benchIcon}).addTo(map);
+    L.marker([43.1277758,	-77.6310082], {icon: benchIcon}).addTo(map);
+    L.marker([43.1289136,	-77.6291993], {icon: benchIcon}).addTo(map);
+    L.marker([43.129076,	-77.6293036], {icon: benchIcon}).addTo(map);
     </script>
   </body>
 </html>
