--- a/test_map.html
+++ b/test_map.html
@@ -4,13 +4,16 @@
     <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.8.0/leaflet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.8.0/leaflet.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <style>
       #map {position: absolute; top: 0; right: 0; bottom: 0; left: 0;}
     </style>
   </head>
   <body>
     <div id="map">
-      <a href="https://www.maptiler.com" style="position:absolute;left:10px;bottom:10px;z-index:999;"><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"></a>
+      <a href="https://www.maptiler.com" style="position:absolute;left:10px;bottom:10px;z-index:5;"><img src="https://api.maptiler.com/resources/logo.svg" alt="MapTiler logo"></a>
     </div>
     <p><a href="https://www.maptiler.com/copyright/" target="_blank">&copy; MapTiler</a> <a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a></p>
     <script>
@@ -176,5 +179,67 @@
     L.marker([43.1289136,	-77.6291993], {icon: benchIcon}).addTo(map);
     L.marker([43.129076,	-77.6293036], {icon: benchIcon}).addTo(map);
     </script>
+
+    <form id="route-input" style="position:fixed; top: 90px; left: 10px; z-index: 999;">
+      <label for="start-building" class="form-label">Starting</label>
+      <input class="form-control" list="datalistOptions" id="start-building" placeholder="Starting building...">
+      <datalist id="datalistOptions">
+        <option value="Bausch & Lomb"></option>
+        <option value="Burton"></option>
+        <option value="Dewey"></option>
+        <option value="Hoyt"></option>
+        <option value="Lattimore"></option>
+        <option value="Morey"></option>
+        <option value="Rettner"></option>
+        <option value="Rush Rhees"></option>
+      </datalist>
+      <label for="start-floor" class="form-label">Floor</label>
+      <select class="form-select" aria-label="Select starting floor" id="start-floor" name="start-floor">
+        <option selected></option>
+        <option value="G"></option>
+        <option value="B"></option>
+        <option value="0"></option>
+        <option value="1"></option>
+        <option value="2"></option>
+        <option value="3"></option>
+        <option value="4"></option>
+        <option value="5"></option>
+        <option value="6"></option>
+        <option value="7"></option>
+        <option value="8"></option>
+        <option value="9"></option>
+        <option value="10"></option>
+      </select>
+      <label for="end-building" class="form-label">Destination</label>
+      <input class="form-control" list="datalistOptions" id="end-building" placeholder="Destination...">
+      <datalist id="datalistOptions">
+        <option value="Bausch & Lomb"></option>
+        <option value="Burton"></option>
+        <option value="Dewey"></option>
+        <option value="Hoyt"></option>
+        <option value="Lattimore"></option>
+        <option value="Morey"></option>
+        <option value="Rettner"></option>
+        <option value="Rush Rhees"></option>
+      </datalist>
+      <label for="end-floor" class="form-label">Floor</label>
+      <select class="form-select" aria-label="Select ending floor" id="end-floor" name="end-floor">
+        <option selected></option>
+        <option value="G"></option>
+        <option value="B"></option>
+        <option value="0"></option>
+        <option value="1"></option>
+        <option value="2"></option>
+        <option value="3"></option>
+        <option value="4"></option>
+        <option value="5"></option>
+        <option value="6"></option>
+        <option value="7"></option>
+        <option value="8"></option>
+        <option value="9"></option>
+        <option value="10"></option>
+      </select>
+      <button type="submit">Find Route</button>      
+    </form>
   </body>
 </html>
