--- a/test_map.html
+++ b/test_map.html
@@ -68,9 +68,10 @@
           Allow Steps
         </label>
       </div>
-      <button class="btn btn-primary" type="submit">Find Route</button>      
+      <button class="btn btn-primary" onclick="find_route()">Find Route</button>      
     </form>
 
+    <script src="scripts/route-script.js"></script>
     <script src="scripts/map-script.js"></script>
   </body>
 </html>
