--- a/test_map.html
+++ b/test_map.html
@@ -65,10 +65,10 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="allowElevators" id="allowElevators">
         <label class="form-check-label" for="allowElevators">
-          Allow Steps
+          Allow Inaccessible Elevators
         </label>
       </div>
-      <button class="btn btn-primary" onclick="find_route()">Find Route</button>      
+      <button class="btn btn-primary" onclick="find_route(event)">Find Route</button>      
     </form>
 
     <script src="scripts/route-script.js"></script>
