display route and directions

--- a/test_map.html
+++ b/test_map.html
@@ -71,7 +71,10 @@
       <button class="btn btn-primary" onclick="find_route(event)">Find Route</button>      
     </form>
 
-    <script src="scripts/route-script.js"></script>
+    <div id="display-directions">
+      <ul id="directions"></ul>
+    </div>
+
     <script src="scripts/map-script.js"></script>
   </body>
 </html>
