limit building options for now

--- a/test_map.html
+++ b/test_map.html
@@ -15,11 +15,11 @@
       <label for="start-building" class="form-label">Starting</label>
       <input class="form-control" list="datalistOptions" id="start-building" placeholder="Starting building..." onchange="propogateFloors('start-building', 'start-floor')">
       <datalist id="datalistOptions">
-        <option value="Bausch & Lomb"></option>
+        <!--<option value="Bausch & Lomb"></option>-->
         <option value="Burton"></option>
-        <option value="Dewey"></option>
+        <!--<option value="Dewey"></option>
         <option value="Hoyt"></option>
-        <option value="Lattimore"></option>
+        <option value="Lattimore"></option>-->
         <option value="Morey"></option>
         <option value="Rettner"></option>
         <option value="Rush Rhees"></option>
@@ -31,11 +31,11 @@
       <label for="end-building" class="form-label">Destination</label>
       <input class="form-control" list="datalistOptions" id="end-building" placeholder="Destination..." onchange="propogateFloors('end-building', 'end-floor')">
       <datalist id="datalistOptions">
-        <option value="Bausch & Lomb"></option>
+        <!--<option value="Bausch & Lomb"></option>-->
         <option value="Burton"></option>
-        <option value="Dewey"></option>
+        <!--<option value="Dewey"></option>
         <option value="Hoyt"></option>
-        <option value="Lattimore"></option>
+        <option value="Lattimore"></option>-->
         <option value="Morey"></option>
         <option value="Rettner"></option>
         <option value="Rush Rhees"></option>
