--- a/index.html
+++ b/index.html
@@ -36,11 +36,69 @@
 
   <body>
     <div class="row" id="routing">
-        <aside class="col-md-3" id="input-directions" hidden></aside>
+        <aside class="col-md-3">
+            <div id="sidebar">
+                <div id="route-input">
+                    <div class="input-group mb-3">
+                        <input class="form-control" list="datalistOptions" id="start-building" placeholder="Starting location..." onchange="propogateFloors('start-building', 'start-floor')">
+                        <datalist id="datalistOptions">
+                            <option value="Burton"></option>
+                            <option value="Morey"></option>
+                            <option value="Rettner"></option>
+                            <option value="Rush Rhees"></option>
+                        </datalist>
+                        <select class="form-select" aria-label="Select starting floor" id="start-floor" name="start-floor">
+                            <option selected>--</option>
+                        </select>
+                    </div>
+                    <div class="input-group mb-3">
+                        <input class="form-control" list="datalistOptions" id="end-building" placeholder="Destination..." onchange="propogateFloors('end-building', 'end-floor')">
+                        <datalist id="datalistOptions">
+                            <option value="Burton"></option>
+                            <option value="Morey"></option>
+                            <option value="Rettner"></option>
+                            <option value="Rush Rhees"></option>
+                        </datalist>
+                        <select class="form-select" aria-label="Select destination floor" id="end-floor" name="end-floor">
+                            <option selected>--</option>
+                        </select>
+                    </div>
+                </div>
+                <div id="access-features">
+                    <h2>Accessibility</h2>
+                    <h3>Allow the following:</h3>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="allowSteps" id="allowSteps">
+                        <label class="form-check-label" for="allowSteps">
+                            Allow Steps
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="allowStairs" id="allowStairs">
+                        <label class="form-check-label" for="allowStairs">
+                            Allow Stairs
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="allowDoors" id="allowDoors">
+                        <label class="form-check-label" for="allowDoors">
+                            Allow Manual Doors
+                        </label>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="allowElevators" id="allowElevators">
+                        <label class="form-check-label" for="allowElevators">
+                            Allow Inaccessible Elevators
+                        </label>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-primary" id="find-route" onclick="find_route(event)">Go</button> 
+        </aside>
         <main class="col" id="map">
         </main>
     </div>
-    <div id="input-overlay">
+    <div id="input-overlay" hidden>
         <div class="input-group mb-3">
             <input class="form-control" list="datalistOptions" id="start-building" placeholder="Starting location..." onchange="propogateFloors('start-building', 'start-floor')">
             <datalist id="datalistOptions">
@@ -50,7 +108,7 @@
                 <option value="Rush Rhees"></option>
             </datalist>
             <select class="form-select" aria-label="Select starting floor" id="start-floor" name="start-floor">
-                <option selected>--</option>
+                <option selected>Floor</option>
             </select>
         </div>
         <div class="input-group mb-3">
@@ -62,7 +120,7 @@
                 <option value="Rush Rhees"></option>
             </datalist>
             <select class="form-select" aria-label="Select destination floor" id="end-floor" name="end-floor">
-                <option selected>--</option>
+                <option selected>Floor</option>
             </select>
         </div>
     </div>
